adding psub and vsub type subscriptions logic