@@ -1,49 +1,21 @@
 package example.poc.model;
 
 import io.micronaut.serde.annotation.Serdeable;
-import org.slf4j.Logger;
-import org.slf4j.LoggerFactory;
 
 import java.util.Arrays;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Serdeable
-public class SessionData {
-    private static final Logger logger = LoggerFactory.getLogger(SessionData.class);
+public record SessionData(String responseBody) {
 
     private static final String USERNAME_PREFIX = "AUTHUSER:";
     private static final String GREET_PREFIX = "GREET:";
     private static final String SUB_PREFIX = "SUB:";
-
-    private final String username;
-    private final String greet;
-    private final List<String> subscriptions;
-
-    public SessionData(String sessionDataRaw) {
-        var parts = sessionDataRaw.lines()
-                .map(line -> line.split(";"))
-                .flatMap(linePart -> Arrays.stream(linePart).sequential()).toList();
-        this.username = parseUsername(parts);
-        this.greet = parseGreet(parts);
-        this.subscriptions = parseSubscriptions(parts);
-
-        logger.debug("SessionData is constructed: %s".formatted(this));
-    }
+    private static final String PSUB_PREFIX = "PSUB:";
+    private static final String VSUB_PREFIX = "VSUB:";
 
     public String getUsername() {
-        return username;
-    }
-
-    public String getGreet() {
-        return greet;
-    }
-
-    public List<String> getSubscriptions() {
-        return subscriptions;
-    }
-
-    private String parseUsername(List<String> parts) {
+        List<String> parts = getParts();
         return parts.stream()
                 .filter(part -> part.startsWith(USERNAME_PREFIX))
                 .map(part -> part.substring(USERNAME_PREFIX.length()))
@@ -51,7 +23,8 @@ public class SessionData {
                 .orElse("");
     }
 
-    private String parseGreet(List<String> parts) {
+    public String getGreet() {
+        List<String> parts = getParts();
         return parts.stream()
                 .filter(part -> part.startsWith(GREET_PREFIX))
                 .map(part -> part.substring(GREET_PREFIX.length()))
@@ -59,19 +32,34 @@ public class SessionData {
                 .orElse("");
     }
 
-    private List<String> parseSubscriptions(List<String> parts) {
+    public List<String> getSubSubscriptions() {
+        List<String> parts = getParts();
         return parts.stream()
                 .filter(part -> part.startsWith(SUB_PREFIX))
                 .map(part -> part.substring(SUB_PREFIX.length()))
-                .collect(Collectors.toList());
+                .toList();
     }
 
-    @Override
-    public String toString() {
-        return "SessionData{" +
-                "username='" + username + '\'' +
-                ", greet='" + greet + '\'' +
-                ", subscriptions=" + subscriptions +
-                '}';
+    public List<String> getPsubSubscriptions() {
+        List<String> parts = getParts();
+        return parts.stream()
+                .filter(part -> part.startsWith(PSUB_PREFIX))
+                .map(part -> part.substring(PSUB_PREFIX.length()).split("/")[0])
+                .toList();
     }
+
+    public List<String> getVsubSubscriptions() {
+        List<String> parts = getParts();
+        return parts.stream()
+                .filter(part -> part.startsWith(VSUB_PREFIX))
+                .map(part -> part.substring(VSUB_PREFIX.length()).split("/")[0])
+                .toList();
+    }
+
+    private List<String> getParts() {
+        return responseBody.lines()
+                .map(line -> line.split(";"))
+                .flatMap(linePart -> Arrays.stream(linePart).sequential()).toList();
+    }
+
 }
